fix flex issue on IE due to missing flex-basis value

--- a/resources/sass/landing.sass
+++ b/resources/sass/landing.sass
@@ -224,7 +224,7 @@ $button-gradient-bottom-right: lighten(saturate(adjust-hue($link, 10deg), 2.5%),
     .promo_image
       margin-bottom: 25px
       +tablet
-        flex: 3 1 0
+        flex: 3 1 0px
         margin-bottom: 0
       img
         display: block
@@ -235,7 +235,7 @@ $button-gradient-bottom-right: lighten(saturate(adjust-hue($link, 10deg), 2.5%),
       font-size: $size-medium
       +tablet
         font-size: 2rem
-        flex: 2 1 0
+        flex: 2 1 0px
       .promo_title
         font-weight: 700
         border-bottom: 4px solid $primary
